0.7.1 - September 2nd, 2008

* Added support for a margin around a tileset image
* Improved the tileset manager and allow tileset reorganizing (by Jared Adams)
* Fixed automatically adding extension to tileset Save As... dialog
* Fixed saving/loading of layers with an origin other than 0,0
* Fixed map resize to apply the offset to layers not matching the map bounds
* Fixed loading of object group properties
* Fixed duplicates of object groups to not share the objects
* Fixed Lua export to increase firstgid of tilesets properly (by Jelle Geerts)
* Fixed saving of property values that contain quotes
* Fixed the state of menu actions when starting up without a map

0.7.0 - July 19th, 2008

* Added support for arbitrary objects and zones placement (by ElvenProgrammer)
* Added ability to create stamp brushes from the tile palette
* Added import/export of configuration
* Added option to automatically open the last map on startup (by Pedro Miller)
* Added option to include comments in .tmx map files when saving
* Added refresh tilesets action (by Pedro Miller)
* Added remembering of the main window size
* Added saving of DOCTYPE declaration in .tmx files
* Added live brush preview for the stamp brush
* Updated the DTD and added it to the website (by Olivier Beaton)
* Reanabled the hexagonal map view (by Matthias Kievernagel)
* Tiles and layers panels are now both floatable and dockable
* Report out of memory error when saving map as image
* Properties table now displays the properties in alphabetical order
* Properties are now saved in the .tmx format in alphabetical order
* Multiline properties are now saved as character data instead of as attribute
* Fixed properties dialog to also save values that were still being edited
* Fixed automatically adding the file extension when not given
* Fixed save as image to work with more formats and to confirm overwrite
* Worked around an issue with the open file dialog on GNU classpath